# openmethane-prior

./: .copyright.tmpl  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  omAgLulucfWasteEmis.py  omCreateDomainInfo.py  omDomainJSON.py  omDownloadInputs.py  omElectricityEmis.py  omFugitiveEmis.py  omGFASEmis.py  omGeoJSON.py  omIndustrialStationaryTransportEmis.py  omInputs.py  omOutputs.py  omPrior.py  omPriorVerify.py  omTermiteEmis.py  omUtils.py  omWetlandEmis.py  om_createDomainInfo.py  plot_emis.ncl  pyproject.toml  requirements-dev.txt  requirements.txt  temporary_file_for_tests.py  todo.org  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/setup/: action.yaml
.github/workflows/: build_docker.yaml  bump.yaml  ci.yaml  install.yaml  release.yaml
changelog/: 100.improvement.md  103.improvement.md  105.improvement.md  106.breaking.md  106.fix.md  112.improvement.md  113.improvement.md  114.fix.md  115.improvement.md  116.improvement.md  118.breaking.1.md  118.breaking.2.md  121.feature.md  122.feature.md  124.improvement.md  125.breaking.md  131.fix.md  134.improvement.md  135.breaking.md  135.improvement.md  136.improvement.md  139.feature.md  141.improvement.md  142.improvement.md  144.feature.md  146.improvement.md  147.improvement.md  148.improvement.md  151.feature.md  153.improvement.md  154.fix.md  155.breaking.md  156.improvement.md  158.fix.md  160.fix.md  161.feature.md  162.trivial.md  163.trivial.md  167.feature.md  170.feature.md  (+46 more)
cmaq_example/: GRIDCRO2D_1  GRIDCRO2D_220701_aust-test  GRIDDOT2D_1  GRIDDOT2D_220701_aust-test
docs/: adding-sectors.md  changelog.md  data-sources.md  development.md  masking.md  visualising-outputs.md
experiments/: check.ipynb  test.ipynb
inputs/: README.md  ch4-electricity.csv  ch4-fugitives.csv  ch4-sectoral-emissions.csv  landuse-sector-map.csv  nasa-nighttime-lights.tiff
intermediates/: README.md
js/: checkWrfMcipDomainSizes.py  helper_funcs.py  prepareFireEmis.py  prepareGeogenicEmis.py  prepareMaccEmis.py  preparePointSourceEmis.py  prepareWetlandEmis.py  requirements.txt  setupCMAQinputs.py
notebooks/: README.md  check_om_prior_output.py  check_prior_output.py  oil_gas_locations.py  plot_output_file.ipynb
notebooks/helpers/: plot.py
notes/: initial-cleanup.md
outputs/: README.md  night-time-lights.tif
scripts/: create_prior_domain.py  create_subset_domain.py  omCreateDomainInfo.py  omDomainJSON.py  omDownloadInputs.py  omGeoJSON.py  omPrior.py  run.sh  test_install.py
src/: __init__.py
src/openmethane-prior/layers/: omGFASEmis.py  omIndustrialStationaryTransportEmis.py  omTermiteEmis.py  omWetlandEmis.py
src/openmethane_prior/: __init__.py  cell_name.py  config.py  inputs.py  logger.py  omInputs.py  omOutputs.py  omPriorVerify.py  omUtils.py  outputs.py  raster.py  units.py  utils.py  verification.py
src/openmethane_prior/data_manager/: asset.py  manager.py  parsers.py  source.py
src/openmethane_prior/data_sources/au_shapes/: __init__.py  states.py
src/openmethane_prior/data_sources/climate_trace/: __init__.py  data.py  sources.py
src/openmethane_prior/data_sources/inventory/: __init__.py  data.py  (+2 more)
src/openmethane_prior/grid/: create_grid.py  domain_grid.py  grid.py  regrid.py
src/openmethane_prior/inventory/: data.py  inventory.py  unfccc.py
src/openmethane_prior/layers/: __init__.py  omAgLulucfWasteEmis.py  omElectricityEmis.py  omFugitiveEmis.py  omGFASEmis.py  omIndustrialStationaryTransportEmis.py  omTermiteEmis.py  omWetlandEmis.py
src/openmethane_prior/lib/: __init__.py  config.py  create_prior.py  inputs.py  outputs.py  prior.py  raster.py  regrid.py  units.py  utils.py  verification.py
src/openmethane_prior/sector/: config.py  inventory.py  sector.py  unfccc.py
src/openmethane_prior/sectors/: __init__.py  omAgLulucfWasteEmis.py  omElectricityEmis.py  omFugitiveEmis.py  omGFASEmis.py  omIndustrialStationaryTransportEmis.py  omTermiteEmis.py  omWetlandEmis.py
tests/: conftest.py  reprojection_test.py  test_cmaq_files.py  test_create_domain_info.py  test_domain_json.py  test_download_data.py  test_om_prior.py  testing.py
tests/integration/: test_domain.py  test_domain_json.py  test_inventory_inputs.py  test_om_prior.py
tests/integration/test_layers/: test_gfas_emis.py  test_termite_emis.py  test_wetland_emis.py
tests/integration/test_om_prior/: test_009_output_domain_xr.csv
tests/integration/test_safeguard/: test_safeguard_allocate_emissions.py  test_safeguard_data_source.py
tests/integration/test_sector_coal/: test_coal.py  test_safeguard_allocate_emissions.py
tests/integration/test_sector_fire/: test_sector_fire.py
tests/integration/test_sector_livestock/: test_sector_livestock.py
tests/integration/test_sector_oil_gas/: test_allocate_safeguard.py  test_emission_sources.py  test_gas_supply.py  test_oil_gas_sector.py
tests/integration/test_sector_termite/: test_sector_termite.py
tests/integration/test_sector_waste/: test_sector_waste.py
tests/integration/test_sector_wetlands/: test_sector_wetlands.py
tests/test_layers/: test_gfas_emis.py  test_termite_emis.py  test_wetland_emis.py
tests/test_om_prior/: test_full_process.csv
tests/unit/: test_cell_name.py  test_config.py  test_grid_functions.py  test_inputs.py  test_lib_regrid.py  test_output.py  test_raster.py  test_reprojection.py  test_units.py  test_utils.py
tests/unit/test_data/: test_anzsic.py  test_climate_trace.py  test_landuse.py  test_locations.py  test_npi.py  test_safeguard.py
tests/unit/test_data_manager/: test_manager.py  test_source.py
tests/unit/test_grid/: test_create_grid.py  test_domain_grid.py  test_geometry.py  test_grid.py  test_regrid.py
tests/unit/test_inventory/: test_inventory.py  test_unfccc.py
tests/unit/test_livestock/: test_gridded_livestock_emissions_by_headcount.py  test_gridded_livestock_headcounts.py
tests/unit/test_oil_gas/: test_emission_source.py
tests/unit/test_sector/: test_au_sector.py  test_inventory.py  test_sector.py  test_unfccc.py
(+84 files in other folders)
