[project]
name = "openmethane_prior"
version = "1.3.0"
description = "Method to calculate a gridded, prior emissions estimate for methane across Australia."
authors = [
    { name = "Peter Rayner", email = "peter.rayner@superpowerinstitute.com.au" },
    { name = "Lindsay Gaines", email = "lindsay.gaines@superpowerinstitute.com.au" },
    { name = "Gerard Mason", email = "gerard.mason@superpowerinstitute.com.au" },
    { name = "Jared Lewis", email = "jared.lewis@climate-resource.com" },
    { name = "Daniel Busch", email = "daniel.busch@climate-resource.com" },
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "numpy>=1.26.4,<2",
    "netcdf4>=1.6.5,<2",
    "xarray==2025.06.1",
    "rioxarray>=0.15.5,<0.16",
    "pyproj>=3.6.1,<4",
    "pandas>=2.2.2,<3",
    "geopandas>=0.14.4,<0.15",
    "python-dotenv>=1.0.1,<2",
    "colorama>=0.4.6,<0.5",
    "cdsapi>=0.7.3,<0.8",
    "shapely>=2.0.4,<3",
    "environs>=11.0.0,<12",
    "prettyprinter>=0.18.0,<0.19",
    "pytest-mock>=3.15.1,<4",
]

[dependency-groups]
tests = ["pytest>=8.2.1,<9"]
dev = [
    "licenseheaders>=0.8.8,<0.9",
    "ruff>=0.5.1,<0.6",
    "towncrier>=24.7.1,<25",
]
notebooks = [
    "notebook>=7.2.1,<8",
    "matplotlib>=3.9.1.post1,<4",
    "jupytext>=1.17.2,<2",
    "cartopy>=0.25.0,<0.26",
]

[tool.uv]
default-groups = [
    "tests",
    "dev",
    "notebooks",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
src = ["src"]
target-version = "py311"
# Provide some leeway for long docstring
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
ignore = [
    "D100",  # Missing docstring in public module
    "D105",  # Missing docstring in magic methods
    "D106",  # Missing docstring in public nested class
    "D400",  # First line should end with a period
    "TRY003",  # Avoid specifying long messages outside the exception class
    "PD011", #  Use `.to_numpy()` instead of `.values`
    "S101",  # Use of `assert` detected
]

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts", "notebooks"]

[tool.towncrier]
package = "openmethane_prior"
package_dir = "src"
filename = "docs/changelog.md"
directory = "changelog/"
title_format = "## openmethane-prior {version} ({project_date})"
underlines = [
    "",
    "",
    "",
]
issue_format = "[#{issue}](https://github.com/openmethane/openmethane-prior/pull/{issue})"
type = [
    { directory = "breaking", name = "âš ï¸ Breaking Changes", showcontent = true },
    { directory = "deprecation", name = "ðŸ—‘ï¸ Deprecations", showcontent = true },
    { directory = "feature", name = "ðŸ†• Features", showcontent = true },
    { directory = "improvement", name = "ðŸŽ‰ Improvements", showcontent = true },
    { directory = "fix", name = "ðŸ› Bug Fixes", showcontent = true },
    { directory = "docs", name = "ðŸ“š Improved Documentation", showcontent = true },
    { directory = "trivial", name = "ðŸ”§ Trivial/Internal Changes", showcontent = false },
]
